Stopped the background image from jumping about

--- a/resources/style.css
+++ b/resources/style.css
@@ -22,6 +22,7 @@ html {
   align-items: center;
   justify-content: center;
   overflow-x: auto;
+  overflow-y: hidden;
 }
 
 .calendar {
